# boston-gov

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: citation-validation.md  copywriting.md  developer.md  devops.md  e2e-testing.md  graph-modeling.md  product-owner.md  qa.md  regulatory-research.md  testing.md  ui-designer.md
.claude/commands/: qcite.md  qplan.md  qtest.md
.claude/hooks/: citation-verification  doc-hygiene  quality-gate  regulatory-context  secrets-guard  test-coverage
.github/ISSUE_TEMPLATE/: agent-task.yml  config.yml  policy-change.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.sh
backend/scripts/: seed_rpp.py  verify_acceptance_criteria.py  verify_seed.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  conversation.py
backend/src/api/routes/: chat.py  facts.py  processes.py
backend/src/db/: __init__.py
backend/src/db/graph/: __init__.py  client.py  config.py
backend/src/db/vector/: __init__.py
backend/src/parsers/: __init__.py
backend/src/schemas/: __init__.py  agent.py  api.py  facts.py  graph.py
backend/src/services/: __init__.py  facts_service.py  graph_service.py
backend/src/tasks/: __init__.py  celery_app.py
backend/tests/: __init__.py  conftest.py  test_main.py
backend/tests/test_agents/: test_conversation.py
backend/tests/test_api/test_routes/: __init__.py  test_chat.py  test_facts.py  test_processes.py
backend/tests/test_db/: __init__.py
backend/tests/test_db/test_graph/: __init__.py  test_client.py
backend/tests/test_schemas/: __init__.py  test_facts.py  test_graph.py
backend/tests/test_services/: test_facts_service.py  test_facts_service_integration.py  test_graph_service.py  test_graph_service_integration.py
docs/: PRD.md  architecture.md  data_model.md
docs/facts/: boston_rpp.yaml
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.d.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  DocumentUpload.tsx  ProcessDAG.tsx  StepDetail.tsx
frontend/src/components/__tests__/: ChatInterface.test.tsx  ProcessDAG.test.tsx  StepDetail.test.tsx
frontend/src/context/: AppContext.tsx
frontend/src/context/__tests__/: AppContext.test.tsx
frontend/src/lib/: api.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/types/: api.ts  facts.ts  graph.ts  index.ts  state.ts
frontend/tests/: App.test.tsx  DocumentUpload.basic.test.tsx  DocumentUpload.test.tsx  DocumentUpload.test.tsx.bak  setup.ts
research/: resident_parking_permit.md
